style.css
@charset "UTF-8";
/* CSS Document */

body {
	font: 12px "Trebuchet MS", Helvetica, sans-serif;
	background:url('i/crossword.png') repeat;
	margin: 0;
	padding: 0;
	color: #000;
	line-height:120%;
}

a:link {
	color: #666;
	text-decoration: none; 
}
a:visited {
	color: #666;
	text-decoration: none;
}
a:hover, a:active, a:focus {
	color: #CCC;
	text-decoration: none;
}

b {
color:#83C8FF;
}

i {
color:#0EE400;
}

h1 {
font:30px Verdana, Geneva, sans-serif;
margin:0;
}

h2 {
font:26px Verdana, Geneva, sans-serif;
margin:0;
}

h3 {
font:22px Verdana, Geneva, sans-serif;
margin:0;
}

h4 {
font:18px Verdana, Geneva, sans-serif;
margin:0;
}

#header {
z-index:9999;
position:fixed;
top:0;
left:0;
width:100%;
height:50px;
padding:30px 0 20px 250px;
color:#FFF;
background:#000;
overflow:hidden;
}

#links {
position:fixed;
right:160px;
top:0;
height:110px;
}

#links a {
text-align:center;
color:#FFF;
float:right;
text-transform:uppercase;
letter-spacing:2px;
font-size:16px;
margin:35px 30px 0 30px;
border-bottom:4px solid #fff;
-webkit-transition: all .2s ease-in-out;
-moz-transition: all .2s ease-in-out;
-ms-transition: all .2s ease-in-out;
-o-transition: all .2s ease-in-out;
transition: all .2s ease-in-out;
}

#links a:hover {
border-bottom:60px solid #fff;
-webkit-transition: all .2s ease-in-out;
-moz-transition: all .2s ease-in-out;
-ms-transition: all .2s ease-in-out;
-o-transition: all .2s ease-in-out;
transition: all .2s ease-in-out;
}

#content {
position:absolute;
background:#fff;
width:700px;
height:500px;
overflow:auto;
padding:20px;
left:50%;
margin-top:100px;
margin-left:-370px;
}

::-webkit-scrollbar {
width:5px;
}

::-webkit-scrollbar-thumb:vertical {
width:1px;
background-color: #000;
border-right: 4px solid #fff;
}

